Fixed z-index of react-select on home page

--- a/public/css/override.less
+++ b/public/css/override.less
@@ -36,6 +36,10 @@ a.dropdown-toggle {
     padding: 0;
 }
 
+.Select-menu-outer {
+    z-index: 999 !important;
+}
+
 @media screen and (min-width: 768px) {
     .navbar-collapse.collapse {
         display: flex!important;
